	  They really did not replace the cache entry in the ID Cache.
	  Now they do that.  Affected file silcd/idlist.c.

	* Fixed the KICK notify handling in the Irssi SILC client to
	  update the channel records so that the kicked client does not
	  appear to be on the channel.  The affected file is 
	  irssi/src/silc/core/silc-channels.c.

Thu Jun 21 17:10:08 CEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the silc_parse_command_line to remove extra spaces
	  from the start and end of the arguments.  Affected file is
	  lib/silcutil/silcutil.c.

	* Cancel and free any active protocol in the function
	  silc_server_close_connection.  Affected file silcd/server.c.

	* Cancel and free any active protocol in the function
	  silc_client_close_connction.  Affected file is
	  lib/silcclient/client.c.

	* Do not execute the KILL command for clients that are in
	  history (ie. they are not in the network).  Affected file is
	  silcd/command.c.

	* Fixed KILL notify handling, client does not crash anymore.
	  Affected file irssi/src/silc/core/silc-channels.c.

	* Reduced the default packet buffer size from 2048 to 1024 in	
	  lib/silccore/silcpacket.c.

	* Added SILC_SKE_STATUS_FREED SKE status type and a reference
	  counter to the SKE context that is incresed when the SKE library
	  performs async operation outside the library.  If the outside
	  process frees the SKE context and FREED status will be set 
	  and the library will detect after the sync operation that the
	  libary is freed.  The affected files are
	  lib/silcske/silcske[_status].[ch].

	* Resolve the client entry information in the function
	  silc_client_channel_message to assure that NULL pointer is not
	  passed as client entry to the application. */

	* Fixed the task timeout calculation to assure that there is
	  never negative timeouts.  The affected file is 
	  lib/silcutil/silcschedule.c.

	* Fixed the channel user mode notification sending in server.